# migration-framework

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README  README.md  kommunikation.md  kommunikation.txt  mqtt-spec.md
devices/: ib_pci_82_00_1.xml
doc/slides/: Makefile  beamercolorthemegauss.sty  beamerfontthemegauss.sty  beamerinnerthemegauss.sty  beamerouterthemegauss.sty  beamerthemegauss.sty  slides.tex
examples/: migrate_swap_task.yaml  migrate_task.yaml  migrate_task_suspend_pscom.yaml  migrate_to_pandora1.yaml  migrate_to_pandora2.yaml  quit_task.yaml  repin_task.yaml  repin_task2.yaml  start_task.yaml  start_task_with_pci_dev.yaml  start_task_xml.yaml  start_task_xml2.yaml  start_task_xml_ivshmem.yaml  stop_task.yaml  stop_task2.yaml  stop_task_regex.yaml
examples/benchmark/: migrate_task.yaml  run.sh  run_mem.sh  server_a.conf  server_b.conf  start_task.yaml  stop_task.yaml
examples/benchmark2/: migrate_swap_task.yaml  migrate_task.yaml  run.sh
examples/lxctools/: README.md  migfra.conf  migrate_to_pandora1_task.yaml  migrate_to_pandora2_task.yaml  start_and_probe_task.yaml  start_task.yaml  stop_task.yaml
examples/suspend_pscom/: init_pscom_git_env.sh  migrate_task_suspend_pscom.yaml  start_centos660_task.yaml  start_centos661_task.yaml  stop_centos660_task.yaml  stop_centos661_task.yaml
src/: benchmark_main.cpp  communicator.hpp  conf.hpp.in  device_utility.cpp  device_utility.hpp  dummy_hypervisor.cpp  dummy_hypervisor.hpp  hooks.cpp  hooks.hpp  hypervisor.hpp  ivshmem_handler.cpp  ivshmem_handler.hpp  libvirt_hypervisor.cpp  libvirt_hypervisor.hpp  libvirt_utility.cpp  libvirt_utility.hpp  logging.hpp  main.cpp  migfra.conf.in  mqtt_communicator.cpp  mqtt_communicator.hpp  parser.cpp  parser.hpp  pci_device_handler.cpp  pci_device_handler.hpp  ponci_hypervisor.cpp  ponci_hypervisor.hpp  pscom_handler.cpp  pscom_handler.hpp  repin_handler.cpp  repin_handler.hpp  serializable.hpp  task.cpp  task.hpp  task_handler.cpp  task_handler.hpp  time_measurement.cpp  time_measurement.hpp  utility.cpp  utility.hpp
